# tiny-AES-c

./: .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: c-cpp.yml  on_push.yml
src/: CMakeLists.txt  aes.c
src/include/: aes.h
tests/: CMakeLists.txt  test.c
